# wf_alloc

./: Cargo.toml  LICENSE-MIT  README.md
benches/: alloc_free.rs  remote_free.rs  wcet_like.rs
docs/: invariants.md  memalloc_report_20260613_135953.html  memory-footprint.md  progress.md  unsafe-audit.md  wfspan-model.md
examples/: baremetal.rs  global_wrapper.rs  multithreaded.rs
plan/: global_alloc.md  roadmap.md  wfspan_algorithm_guide.md
src/: acquire.rs  align.rs  allocator.rs  atomic_backend.rs  block.rs  config.rs  global.rs  heap.rs  help_record.rs  huge.rs  large.rs  lib.rs  local_list.rs  metadata.rs  pagemap.rs  region.rs  remote_mpsc.rs  size_class.rs  span.rs  spmc_span_list.rs  stats.rs  tagged.rs  thread.rs  verify.rs
tests/: concurrent_smoke.rs  exhaustion.rs  global_alloc.rs  global_alloc_config.rs  global_alloc_growth.rs  global_alloc_realloc.rs  global_alloc_zeroed.rs  global_allocator_std.rs  helping_small.rs  huge_concurrent.rs  huge_sequential.rs  large_concurrent.rs  large_sequential.rs  loom_models.rs  remote_free.rs  sequential.rs  spmc_basic.rs
