[package]
name = "wf_alloc"
version = "0.1.0"
edition = "2024"
description = "Wfspan-style wait-free dynamic memory allocator."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["no_std", "wait-free", "allocator"]
categories = ["Memory management"]

[features]
default = ["std"]
# std test/bench harness helpers (region provisioning, quiescent verifier).
# Build with --no-default-features for a no_std-friendly core.
std = []
# Hosted GlobalAlloc wrapper for std targets.
global = ["std"]
# Backward-compatible alias for the branch-local experimental feature name.
experimental-global = ["global"]
# Extra runtime statistics (currently stats are always on; reserved).
stats = []
# Reserved for loom model testing (not wired up yet; see docs/progress.md).
loom = []
nightly = []

[dependencies]

[[bench]]
name = "alloc_free"
harness = false

[[bench]]
name = "remote_free"
harness = false

[[bench]]
name = "wcet_like"
harness = false
