[package]
name = "wf_alloc"
version = "0.1.2"
edition = "2024"
description = "Wfspan-style wait-free dynamic memory allocator."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["no-std", "wait-free", "allocator"]
categories = ["memory-management", "no-std"]
repository = "https://github.com/ytakano/wf_alloc"

[features]
default = ["std"]
# std test/bench harness helpers (region provisioning, quiescent verifier).
# Build with --no-default-features for a no_std-friendly core.
std = []
# Hosted GlobalAlloc wrapper for std targets.
global = ["std"]
# Backward-compatible alias for the branch-local experimental feature name.
experimental-global = ["global"]
# Extra runtime statistics (currently stats are always on; reserved).
stats = []
# Small-state loom model tests for concurrent allocator subprotocols.
loom = ["std", "dep:loom"]
nightly = []

[dependencies]
loom = { version = "0.7", optional = true }

[[bench]]
name = "alloc_free"
harness = false

[[bench]]
name = "remote_free"
harness = false

[[bench]]
name = "wcet_like"
harness = false
